[package]
name = "yaks"
version = "0.1.0-alpha.0"
description = "A minimalistic ECS."
authors = ["Alexander Sepity <alexander.sepity@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ratysz/yaks"
readme = "README.md"
keywords = ["ecs", "entity", "component"]
categories = ["data-structures", "game-engines"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["parallel"]
parallel = ["crossbeam-channel", "fixedbitset", "rayon"]
test = []

[dependencies]
crossbeam-channel = { version = "0.4.2", optional = true }
fixedbitset = { version = "0.3.0", optional = true }
#fxhash = "0.2.1"
hecs = "0.2.12"
parking_lot = "0.10.2"
paste = "0.1.6"
rayon = { version = "1.3.0", optional = true }

[dev-dependencies]
rand = "0.7.3"