[package]
name = "yaks"
version = "0.1.0"
description = "Minimalistic framework for automatic multithreading of hecs via rayon"
authors = ["Alexander Sepity <alexander.sepity@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ratysz/yaks"
readme = "README.md"
keywords = ["hecs", "parallel", "ecs", "entity", "component"]
categories = ["concurrency", "game-engines"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["parallel"]
# If disabled, forces everything to work on a single thread.
parallel = ["crossbeam-channel", "fixedbitset", "rayon"]
# Turns off an internal debug drop check. Useful for testing panics.
test = []

[dependencies]
crossbeam-channel = { version = "0.4.2", optional = true }
fixedbitset = { version = "0.3.0", optional = true }
hecs = "0.2.12"
parking_lot = "0.10.2"
paste = "0.1.6"
rayon = { version = "1.3.0", optional = true }

[dev-dependencies]
rand = "0.7.3"